--- a/angular.json
+++ b/angular.json
@@ -102,6 +102,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "todolist1:build:production",
+            "firebaseProject": "my-first-todo-poject",
+            "firebaseHostingSite": "my-first-todo-poject"
+          }
         }
       }
     }
